feat(leetcode/java/BinaryTreeRightSideView199): PASS