@@ -12,42 +12,39 @@ import java.util.function.Function;
 
 @RunWith(Parameterized.class)
 public class BinaryTreeRightSideView199Test extends TestCase {
-	private final String name;
-	private final List<Integer> tree;
-	private final boolean want;
+    private final String name;
+    private final List<Integer> tree;
+    private final List<Integer> want;
 
-	public BinaryTreeRightSideView199Test(String name, List<Integer> left, boolean want) {
-		this.name = name;
-		this.tree = left;
-		this.want = want;
-	}
+    public BinaryTreeRightSideView199Test(String name, List<Integer> left, List<Integer> want) {
+        this.name = name;
+        this.tree = left;
+        this.want = want;
+    }
 
-	@Parameterized.Parameters(name = "{0}")
-	public static List<Object[]> testData() {
-		return List.of(
-				new Object[] { "empty", List.of(), true },
-				new Object[] { "one", List.of(1), true },
-				new Object[] { "two", Arrays.asList(1, 2), true },
-				new Object[] { "three", Arrays.asList(1, 2, 3), true },
-				new Object[] { "four - balanced", Arrays.asList(1, 2, 3, 4), true },
-				new Object[] { "four - unbalanced", Arrays.asList(1, null, 2, null, 3, 4), false },
-				new Object[] { "leetcode testcase: root node balanced, but child nodes unbalanced",
-						Arrays.asList(1, 2, 2, 3, null, null, 3, 4, null, null, 4), false });
-	}
+    @Parameterized.Parameters(name = "{0}")
+    public static List<Object[]> testData() {
+        return List.of(
+                new Object[]{"empty", List.of(), List.of()},
+                new Object[]{"one", List.of(1), List.of(1)},
+                new Object[]{"two", Arrays.asList(1, 2), List.of(1, 2)},
+                new Object[]{"three", Arrays.asList(1, 2, 3), List.of(1, 3)},
+                new Object[]{"three - has null", Arrays.asList(1, 2, null, 3), List.of(1, 2, 3)},
+                new Object[]{"leetcode example 1", Arrays.asList(1, 2, 3, null, 5, null, 4), List.of(1, 3, 4)},
+                new Object[]{"leetcode example 2", Arrays.asList(1, 3, 4, null, null, null, 5), List.of(1, 4, 5)}
+        );
+    }
 
-	@Test
-	public void test() {
-		BalancedBinaryTree110.Solution solution = new BalancedBinaryTree110.Solution();
-		Map<String, Function<BinaryTree.TreeNode, Boolean>> fns = Map.of(
-				"solution::isBalanced",
-				solution::isBalanced,
-				"solution::isBalanced2",
-				solution::isBalanced2);
-		BinaryTree tree = BinaryTree.of(this.tree);
-		fns.forEach((methodName, method) -> {
-			System.out.printf("Calling method %s\n", methodName);
-			boolean got = method.apply(tree.getRoot());
-			assertEquals(want, got);
-		});
-	}
+    @Test
+    public void test() {
+        BinaryTreeRightSideView199.Solution solution = new BinaryTreeRightSideView199.Solution();
+        Map<String, Function<BinaryTree.TreeNode, List<Integer>>> fns = Map.of(
+                "solution::rightSideView", solution::rightSideView);
+        BinaryTree tree = BinaryTree.of(this.tree);
+        fns.forEach((methodName, method) -> {
+            System.out.printf("Calling method %s\n", methodName);
+            List<Integer> got = method.apply(tree.getRoot());
+            assertEquals(want, got);
+        });
+    }
 }
